[project]
name = "p-value-confidence-intervals-correlation"
version = "0.1.0"
description = "Estudo sobre P-Value, Intervalos de Confiança e Correlação"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
